# word-xml-python

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  Untitled-1.json  api_server.py  cellInfo.csv  cellInfo_0.csv  cellInfo_1.csv  cellInfo_2.csv  docker-compose.yml  pyproject.toml  quick_demo.py  requirements-api.txt
examples/: __init__.py  basic_usage.py  core.py  quick_demo.py  vl_map_demo.py  word_to_xml.py
examples/vl/: json.txt  vl_map_demo.py
src/word_xml_python/: __init__.py
src/word_xml_python/apis/: main.py
src/word_xml_python/apis/controller/: __init__.py  widget_controller.py
src/word_xml_python/apis/database/: database.py
src/word_xml_python/apis/database/entities/: weiget_record.py
src/word_xml_python/apis/database/repository/: __init__.py  widget_repository.py
src/word_xml_python/apis/dto/: __init__.py  widget_dto.py
src/word_xml_python/apis/service/: __init__.py  widget_service.py
src/word_xml_python/core/: __init__.py  constants.py  core.py
src/word_xml_python/exporters/: __init__.py  api_exporter.py  csv_exporter.py
src/word_xml_python/extractors/: __init__.py  cell_extractor.py  extractor.py  table_extractor.py
src/word_xml_python/models/: __init__.py  cell.py  extractor.py  spit.py  table.py  verifier.py  xml_meta.py
src/word_xml_python/parser/: __init__.py  xml_parser.py
src/word_xml_python/split/: __init__.py  split.py  split_verifier.py
src/word_xml_python/vlmap/: __init__.py  map_verifier.py  vl_map.py
word/: 一.docx  左重复表.docx  请假表.docx
